k8s/spring-cloud-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway-ingress
  namespace: ingress-gateway-ns
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://local.ks.tv, https://local.ui.ks.tv"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - local.ks.tv
      secretName: local.ks.tv
  rules:
    - host: local.ks.tv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-gateway
                port:
                  name: http
